<resources>
    <string name="app_name">Telgu Jukebox</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details_title_text">Cupcake ipsum dolor</string>
    <string name="details_body_text">Sit amet chocolate cake sweet macaroon chupa chups. Bear claw carrot cake chocolate bar biscuit chocolate cookie. Chocolate sesame snaps candy canes bear claw dragée tootsie roll.</string>
    <string name="all_comments">All Comments !</string>
    <string name="movie_title">Bahubali2</string>
    <string name="hint_movie_release_date">28 April 2017</string>
    <string name="hint_movie_duration">45 min</string>
    <string name="duration">Duration: </string>
    <string name="overview">Overview</string>
    <string name="released">Released: </string>

    <string name="about_us">Way2Fresher.com-A very Perfect Jobsite in india which has simple mission to facilitate to find jobs with your matching desire,to prepare for varoius campus written exam and interviews. It also lets you to know about available Schlorships and bank Loans.Way2Fresher mobile application is a genuine effort to provide services in faster way</string>
    <string name="version">Version:1.0</string>
    <string name="splash_msg">Where words leave off, music begins</string>
    <string name="player_error">Error initializing YouTube player: %s</string>

</resources>

