<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content_movie_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_movie_detail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="@dimen/expandedTitleMarginEnd"
            app:expandedTitleMarginStart="@dimen/expandedTitleMarginStart"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/movie_poster"
                android:transitionName="kittenImage"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_movie_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/padding_8dp">

            <LinearLayout
                android:id="@+id/movie_detail_fragment_container_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="@dimen/padding_24dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/padding_16dp"
                    android:paddingRight="@dimen/padding_16dp">

                    <ImageView
                        android:id="@+id/small_movie_poster"
                        android:layout_width="0dp"
                        android:layout_height="180dp"
                        android:layout_weight="3"
                        android:scaleType="centerCrop"
                        android:src="@drawable/movie_poster"
                        app:layout_collapseMode="parallax"
                        app:layout_collapseParallaxMultiplier="0.7" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="180dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="5"
                        android:gravity="right"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/padding_8dp">

                        <com.iarcuschin.simpleratingbar.SimpleRatingBar
                            android:id="@+id/rating"
                            android:layout_width="@dimen/simpleratingbar_width"
                            android:layout_height="0dp"
                            android:layout_gravity="end|right"
                            android:layout_weight="1"
                            android:gravity="end|right"
                            app:srb_borderColor="@color/colorPrimaryDark"
                            app:srb_fillColor="@color/colorPrimary"
                            app:srb_isIndicator="true"
                            app:srb_numberOfStars="5"
                            app:srb_starSize="@dimen/srb_starSize"
                            app:srb_stepSize="0.1" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="right|end|center_vertical"
                                android:paddingLeft="2dp"
                                android:paddingRight="2dp"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:textSize="14sp"
                                android:textStyle="bold"
                                android:text="@string/released" />

                            <TextView
                                android:id="@+id/release_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="right|end|center_vertical"
                                android:paddingLeft="2dp"
                                android:paddingRight="2dp"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:textSize="16sp"
                                android:textStyle="italic"
                                android:hint="@string/hint_movie_release_date" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="right|end|center_vertical"
                                android:paddingLeft="2dp"
                                android:paddingRight="2dp"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:textSize="14sp"
                                android:textStyle="bold"
                                android:text="@string/duration" />

                            <TextView
                                android:id="@+id/duration"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="right|end|center_vertical"
                                android:paddingLeft="2dp"
                                android:paddingRight="2dp"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:textSize="16sp"
                                android:textStyle="italic"
                                android:hint="@string/hint_movie_duration" />
                        </LinearLayout>
                        <ImageView
                            android:id="@+id/favorite"
                            android:layout_width="wrap_content"
                            android:padding="2dp"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:src="@drawable/unstarred"/>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_16dp"
                    android:layout_marginTop="10dp"
                    android:text="Overview"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.ms.square.android.expandabletextview.ExpandableTextView
                        xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/expand_text_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        expandableTextView:animDuration="200"
                        expandableTextView:maxCollapsedLines="5">

                        <TextView
                            android:id="@id/expandable_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:lineSpacingExtra="4dp"
                            android:padding="@dimen/padding_16dp"
                            android:textSize="@dimen/text_size_16sp" />

                        <ImageButton
                            android:id="@id/expand_collapse"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|bottom"
                            android:background="@android:color/transparent"
                            android:padding="@dimen/padding_8dp" />
                    </com.ms.square.android.expandabletextview.ExpandableTextView>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/containerMoviesReviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/padding_16dp"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:text="Comments" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerViewMovieReviews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="horizontal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:paddingBottom="@dimen/padding_16dp"
                        android:paddingLeft="@dimen/padding_16dp"
                        android:text="@string/all_comments"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_16dp"
        app:layout_anchor="@id/appbar_movie_detail"
        app:layout_anchorGravity="bottom|end"
        app:backgroundTint="@color/colorPrimary"
        app:srcCompat="@mipmap/ic_play_arrow_white_24dp" />
</android.support.design.widget.CoordinatorLayout>